<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ToolbarTheme"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/new_task" />

            <include
                android:id="@+id/included"
                layout="@layout/calendar_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar" />

            <androidx.cardview.widget.CardView
                android:layout_marginBottom="54dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/included"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="6dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="4dp"
                            android:layout_height="32dp"
                            android:background="@color/black"
                            android:elevation="0dp" />

                        <EditText
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:cursorVisible="true"
                            android:inputType="text"
                            android:id="@+id/title"
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ellipsize="end"
                            android:hint="@string/what_do_you_need_to_do"
                            android:maxLength="35"
                            android:maxLines="1"
                            android:paddingStart="12dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="20dp"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha=".1"
                        android:background="@color/black_copy"
                        android:elevation="0dp" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/notes"
                        android:textStyle="bold" />

                    <EditText
                        android:textCursorDrawable="@null"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:cursorVisible="true"
                        android:maxLength="100"
                        android:inputType="text"
                        android:id="@+id/note_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="12dp"
                        android:background="@null"
                        android:ellipsize="end"
                        android:hint="@string/add_note"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha=".1"
                        android:background="@color/black_copy"
                        android:elevation="0dp" />

                    <LinearLayout
                        android:id="@+id/time_container"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/time"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="12dp"
                            android:textColor="@color/black"
                            tools:text="07:00 AM" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black" />

</RelativeLayout>