<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mynotes.ui.MyTaskFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_task"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <include
        android:id="@+id/included"
        app:layout_scrollFlags="snap"
        layout="@layout/calendar_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/included">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/task_delegate_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/active_arrow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="48dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="0dp"
                        android:padding="6dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/task_title"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/active_task"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <FrameLayout
                android:visibility="gone"
                android:id="@+id/active_task_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.force.codes.mynotes.core.widget.swipeadater.DragDropSwipeRecyclerView
                    android:id="@+id/active_adapter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:visibility="visible"
                    app:item_layout="@layout/task_item"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/task_item" />
            </FrameLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/complete_task_delegate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/complete_arrow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="48dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="0dp"
                        android:padding="6dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/complete_task_title"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/completed_task"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <FrameLayout
                android:visibility="gone"
                android:id="@+id/complete_task_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="false">

                <com.force.codes.mynotes.core.widget.swipeadater.DragDropSwipeRecyclerView
                    android:id="@+id/complete_adapter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    app:item_layout="@layout/task_item"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/task_item" />

            </FrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/empty_state"
        android:visibility="gone"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/included"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/empty_state"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <TextView
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_is_empty"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/separator"
        android:layout_marginTop="12dp"
        android:elevation="0dp"
        android:alpha="0.4"
        android:layout_below="@id/nested_scroll_view"
        android:background="@color/opaque"
        android:layout_width="match_parent"
        android:layout_height="6dp"/>

    <!-- special use case for the snackbar and fab. -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_task_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_add_24"
            app:tint="@color/white"
            tools:ignore="ContentDescription,RelativeOverlap" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="visible"
        android:id="@+id/progress_circular_container"
        android:layout_below="@id/included"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_circular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias=".35"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:padding="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            style="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_circular"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>